fix: opengemini version for 1.0.1 and 1.1.0-rc0
Signed-off-by: shilinlee <836160610@qq.com>

--- a/opengemini-server/1.1.0-rc0/Dockerfile
+++ b/opengemini-server/1.1.0-rc0/Dockerfile
@@ -1,6 +1,6 @@
 FROM buildpack-deps:bullseye-curl
 
-ENV OPENGEMINI_VERSION 1.1.0rc0
+ENV OPENGEMINI_VERSION 1.1.0-rc0
 
 RUN ARCH= && dpkgArch="$(dpkg --print-architecture)" && \
     case "${dpkgArch##*-}" in \
@@ -8,7 +8,7 @@ RUN ARCH= && dpkgArch="$(dpkg --print-architecture)" && \
       arm64) ARCH='arm64';; \
       *)     echo "Unsupported architecture: ${dpkgArch}"; exit 1;; \
     esac && \
-    wget --no-verbose --no-check-certificate https://github.com/openGemini/openGemini/releases/download/v${OPENGEMINI_VERSION}/openGemini-${OPENGEMINI_VERSION}-linux-${ARCH}.tar.gz && \
+    wget --no-verbose --no-check-certificate https://github.com/openGemini/openGemini/releases/download/v1.1.0rc0/openGemini-${OPENGEMINI_VERSION}-linux-${ARCH}.tar.gz && \
     tar zxvf openGemini-${OPENGEMINI_VERSION}-linux-${ARCH}.tar.gz --wildcards '*ts-server' && \
     mv usr/bin/ts-server /usr/local/bin/ts-server && \
     rm -f openGemini-${OPENGEMINI_VERSION}-linux-${ARCH}.tar.gz*
