--- a/opengemini-server/1.1.0/Dockerfile
+++ b/opengemini-server/1.1.0/Dockerfile
@@ -1,6 +1,16 @@
-FROM buildpack-deps:bullseye-curl
+FROM buildpack-deps:bookworm-curl
 
-ENV OPENGEMINI_VERSION 1.1.0-rc0
+RUN export DEBIAN_FRONTEND=noninteractive && \
+    # install dependencies \
+    apt-get update -y && \
+    apt-get install -y --no-install-recommends \
+      ca-certificates \
+      procps && \
+    # cleanup apt \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+ENV OPENGEMINI_VERSION 1.1.0
 
 RUN ARCH= && dpkgArch="$(dpkg --print-architecture)" && \
     case "${dpkgArch##*-}" in \
@@ -8,9 +18,11 @@ RUN ARCH= && dpkgArch="$(dpkg --print-architecture)" && \
       arm64) ARCH='arm64';; \
       *)     echo "Unsupported architecture: ${dpkgArch}"; exit 1;; \
     esac && \
-    wget --no-verbose --no-check-certificate https://github.com/openGemini/openGemini/releases/download/v1.1.0rc0/openGemini-${OPENGEMINI_VERSION}-linux-${ARCH}.tar.gz && \
-    tar zxvf openGemini-${OPENGEMINI_VERSION}-linux-${ARCH}.tar.gz --wildcards '*ts-server' && \
+    wget --no-verbose --no-check-certificate https://github.com/openGemini/openGemini/releases/download/v${OPENGEMINI_VERSION}/openGemini-${OPENGEMINI_VERSION}-linux-${ARCH}.tar.gz && \
+    tar zxvf openGemini-${OPENGEMINI_VERSION}-linux-${ARCH}.tar.gz --wildcards '*ts-*' && \
     mv usr/bin/ts-server /usr/local/bin/ts-server && \
+    mv usr/bin/ts-cli /usr/local/bin/ts-cli && \
+    rm -f usr/bin/ts-* && \
     rm -f openGemini-${OPENGEMINI_VERSION}-linux-${ARCH}.tar.gz*
 
 COPY server.conf /etc/openGemini/server.conf
