feat: support opengemini-cluster 1.1.0 version
Signed-off-by: shilinlee <836160610@qq.com>

--- a/opengemini-server/1.0.0/server.conf
+++ b/opengemini-server/1.0.0/server.conf
@@ -16,7 +16,7 @@
   enable-mmap-read = false
 
 [logging]
-  path = "/var/log/openGemini/"
+  path = "/var/log/openGemini"
 
 [gossip]
   enabled = false
