--- a/opengemini-server/1.0.1/server.conf
+++ b/opengemini-server/1.0.1/server.conf
@@ -16,7 +16,7 @@
   enable-mmap-read = false
 
 [logging]
-  path = "/var/log/openGemini/"
+  path = "/var/log/openGemini"
 
 [gossip]
   enabled = false
